--- a/CustomDataBinding/src/main/res/values/strings.xml
+++ b/CustomDataBinding/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">JetPack</string>
+    <string name="app_name">DataBinding</string>
+    <string name="wechat">微信</string>
+    <string name="contact">通讯录</string>
+    <string name="find">发现</string>
+    <string name="mine">我</string>
+    <string name="detail">详情</string>
 </resources>
